--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "backbone": "~1.2.3",
     "underscore": "~1.8.3",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "bootstrap-sass": "~3.3.6"
   }
 }
