--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
@@ -31,16 +32,19 @@
     ]
   },
   "browser": {
-    "jquery": "/ower_components/jquery/dist/jquery.js",
+    "jquery": "./bower_components/jquery/dist/jquery.js",
     "underscore": "./bower_components/underscore/underscore.js",
     "backbone": "./bower_components/backbone/backbone.js"
   },
   "browserify-shim": {
-    "underscore":"_",
-    "jquery":"$",
+    "underscore": "_",
+    "jquery": "$",
     "backbone": {
       "exports": "backbone",
-      "depends":["underscore", "jquery"]
+      "depends": [
+        "underscore",
+        "jquery"
+      ]
     }
   }
 }
