--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-eslint": "^1.1.1",
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
