--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
