--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node_modules/.bin/gulp"
+    "dev": "node_modules/.bin/nf start"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +14,15 @@
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
+    "babel": "^6.3.26",
+    "babel-core": "^6.4.5",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "body-parser": "^1.14.2",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "express": "^4.13.4",
+    "foreman": "^1.4.1",
     "gulp-bower": "0.0.13",
     "gulp-browserify": "^0.5.1",
     "gulp-connect": "^2.3.1",
@@ -24,6 +31,12 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "mongoose": "^4.4.2",
+    "piping": "^0.3.0",
+    "pretty-error": "^2.0.0",
+    "q": "^1.4.1",
+    "socket.io": "^1.4.5",
+    "twit": "^2.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
