--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "body-parser": "^1.14.2",
+    "bower-sync": "^0.1.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "colors": "^1.1.2",
     "express": "^4.13.4",
     "foreman": "^1.4.1",
     "gulp-bower": "0.0.13",
@@ -31,6 +33,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "http-proxy-middleware": "^0.10.0",
     "mongoose": "^4.4.2",
     "piping": "^0.3.0",
     "pretty-error": "^2.0.0",
