--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "backbone": "~1.2.3",
     "underscore": "~1.8.3",
     "jquery": "~2.2.0",
-    "bootstrap-sass": "~3.3.6"
+    "bootstrap-sass": "~3.3.6",
+    "requirejs": "~2.1.22"
+  },
+  "devDependencies": {
+    "socket.io-client": "~1.4.5"
   }
 }
