--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "body-parser": "^1.14.2",
+    "bower-requirejs": "^1.2.0",
     "bower-sync": "^0.1.0",
+    "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "colors": "^1.1.2",
@@ -34,6 +36,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "http-proxy-middleware": "^0.10.0",
+    "mongodb": "^2.1.6",
     "mongoose": "^4.4.2",
     "piping": "^0.3.0",
     "pretty-error": "^2.0.0",
