--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "piping": "^0.3.0",
     "pretty-error": "^2.0.0",
     "q": "^1.4.1",
+    "requirejs": "^2.1.22",
     "socket.io": "^1.4.5",
     "twit": "^2.2.2",
     "vinyl-buffer": "^1.0.0",
