--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,10 @@
   "dependencies": {
     "backbone": "~1.2.3",
     "underscore": "~1.8.3",
-    "jquery": "~2.2.0",
+    "jquery": "~1.9.0",
     "bootstrap-sass": "~3.3.6",
-    "requirejs": "~2.1.22"
+    "requirejs": "~2.1.22",
+    "backbone-amd": "~1.1.0"
   },
   "devDependencies": {
     "socket.io-client": "~1.4.5"
