--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backbone": "^1.2.3",
     "gulp": "^3.9.0",
+    "jquery": "^2.2.0",
+    "lodash": "^4.3.0",
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
     "babel": "^6.3.26",
+    "babel-cli": "^6.5.1",
     "babel-core": "^6.4.5",
     "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
     "body-parser": "^1.14.2",
     "bower-sync": "^0.1.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "colors": "^1.1.2",
+    "eslint": "^1.10.3",
     "express": "^4.13.4",
     "foreman": "^1.4.1",
     "gulp-bower": "0.0.13",
@@ -44,26 +50,5 @@
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
     "watchify": "^3.7.0"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browser": {
-    "jquery": "./bower_components/jquery/dist/jquery.js",
-    "underscore": "./bower_components/underscore/underscore.js",
-    "Backbone": "./bower_components/backbone/backbone.js"
-  },
-  "browserify-shim": {
-    "underscore": "_",
-    "jquery": "$",
-    "Backbone": {
-      "exports": "Backbone",
-      "depends": [
-        "underscore",
-        "jquery"
-      ]
-    }
   }
 }
