--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "http-proxy-middleware": "^0.10.0",
     "mongoose": "^4.4.2",
     "piping": "^0.3.0",
     "pretty-error": "^2.0.0",
+    "proxy-middleware": "^0.15.0",
     "q": "^1.4.1",
     "socket.io": "^1.4.5",
     "twit": "^2.2.2",
