--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "colors": "^1.1.2",
+    "connect-history-api-fallback": "^1.1.0",
     "eslint": "^1.10.3",
     "eslint-plugin-backbone": "^1.2.0",
     "express": "^4.13.4",
