--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.14.2",
     "bower-sync": "^0.1.0",
     "browser-sync-middleware-spa": "^1.0.0",
+    "browser-sync-spa": "^1.0.3",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
     "colors": "^1.1.2",
