--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test":"node_modules/.bin/mocha --compilers js:babel-core/register",
     "dev": "node_modules/.bin/nf start"
   },
   "author": "",
@@ -28,6 +28,7 @@
     "browser-sync-middleware-spa": "^1.0.0",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "chai": "^3.5.0",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.1.0",
     "eslint": "^1.10.3",
@@ -43,6 +44,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "html-to-vdom": "^0.7.0",
+    "mocha": "^2.4.5",
     "mongoose": "^4.4.2",
     "piping": "^0.3.0",
     "pretty-error": "^2.0.0",
