--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
-language: node_js
-node_js:
-  - "4.1"
-  - "4.0"
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "iojs"
+ language: node_js
+ node_js:
+   - "4.1"
+   - "4.0"
+   - "0.12"
+   - "0.11"
+   - "0.10"
+   - "iojs"
 env:
- - CXX=g++-4.8
+  - CXX=g++-4.8
+services:
+  - mongodb
 addons:
- apt:
-   sources:
-     - ubuntu-toolchain-r-test
-   packages:
-     - g++-4.8
-before_install:
- - export DISPLAY=:99.0
-   - sh -e /etc/init.d/xvfb start
- - npm install -g bower
- - bower install
- - npm install
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+ before_install:
+  - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+  - npm install -g bower
+  - bower install
+  - npm install
